# x402-zk-mesh

./: .env.example  .gitignore  LICENSE  README.md  README_DORAHACKS.md  README_SHORT.md  dummy_external_bot.js  eslint.config.mjs  guild_agent_bot.js  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
circuits/: deposit_commitment.circom  execution_proof.circom  membership_proof.circom
circuits/keys/: deposit_commitment_final.zkey  membership_proof_final.zkey  membership_proof_vk.json
circuits/scripts/: prove_test.sh  setup.sh
contracts/: Cargo.toml
contracts/guild-registry/: Cargo.toml
contracts/privacy-pool/: Cargo.toml
contracts/verifier/: Cargo.toml
contracts/verifier-deposit/: Cargo.toml
contracts/verifier-deposit/src/: lib.rs
contracts/verifier-execution/: Cargo.toml
contracts/verifier-membership/: Cargo.toml
deployments/testnet/: deploy_log.md
docs/: AUDIT_FINALIST_ASSIMILATION.md  DEMO_VIDEO_SCRIPT.md  JUDGE_GUIDE.md  PENDING_MOCKS.md
guild-data/: agents.json  events.json  tasks.json
plugins/: quarantine.wasm
plugins/quarantine-src/: Cargo.toml
plugins/quarantine-src/src/: lib.rs
public/: vercel-import.env
public/circuits/: deposit_commitment.wasm  deposit_commitment_vk.json  execution_proof.wasm  execution_proof_final.zkey  execution_proof_vk.json  membership_proof.wasm
scripts/: deploy-guild-registry.mjs  deploy-membership-verifier.mjs  membership-proof-smoke.mjs  run-judge-suite.mjs  run-live-trace-demo.mjs  start-judge-stack.mjs  zk-prove-smoke.mjs
src-tauri/: tauri.conf.json
(+97 files in other folders)
