[package]
name = "verifier_deposit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "27.0.0-rc.1"

[dev-dependencies]
soroban-sdk = { version = "27.0.0-rc.1", features = ["testutils"] }
ark-bn254 = "0.6"
ark-ff = "0.6"
ark-serialize = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
